--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,14 +1,13 @@
-name: Transliterate Cyrillic
-version: 1.0.1
-description: "Transliterates Cyrillic text to Latin."
+name: Transliterate Cyrillic Twig Filter
+version: 1.0.0
+description: "Twig filter for transliterating Cyrillic text to Latin."
 icon: file-text
 author:
-  name: Ole Vik
-  email: git@olevik.me
-  url: http://olevik.me
-homepage: https://github.com/olevik/grav-plugin-transliterate-cyrillic
-keywords: caption, captions, figure, figcaption, image, images, image caption
-bugs: https://github.com/olevik/grav-plugin-transliterate-cyrillic/issues
+  name: Captain Flint
+  email: flint@cryptext.com
+homepage: https://github.com/Captain-Flint/grav-plugin-transliterate-cyrillic-twig-filter
+keywords: twig, filter, cyr-to-lat, transliterate, cyrillic
+bugs: https://github.com/Captain-Flint/grav-plugin-transliterate-cyrillic-twig-filter/issues
 license: MIT
 dependencies:
   - { name: grav, version: '>=1.6' }
@@ -25,16 +24,3 @@ form:
         0: PLUGIN_ADMIN.DISABLED
       validate:
         type: bool
-    mode:
-      type: select
-      label: PLUGIN_TRANSLITERATE_CYRILLIC.ADMIN.MODE.LABEL
-      default: markdown
-      description: PLUGIN_TRANSLITERATE_CYRILLIC.ADMIN.MODE.DESCRIPTION
-      options:
-        markdown: Markdown
-        html: HTML
-    event:
-      type: text
-      label: PLUGIN_TRANSLITERATE_CYRILLIC.ADMIN.EVENT.LABEL
-      placeholder: PLUGIN_TRANSLITERATE_CYRILLIC.ADMIN.EVENT.PLACEHOLDER
-      description: PLUGIN_TRANSLITERATE_CYRILLIC.ADMIN.EVENT.DESCRIPTION
